[workspace]
resolver = "2"
members = ["io-trait", "io-impl", "io-test"]

[workspace.package]
authors = ["Sergey Shandar"]
license = "MIT"
repository = "https://github.com/datablockset/io"
version = "0.11.0"

[workspace.dependencies]
io-trait = { path = "io-trait", version = "0.11.0" }
libc = "0.2.153"
wasm-bindgen-test = "0.3.42"
