[package]
name = "io-impl"
version = "0.8.1"
edition = "2021"
description = "I/O implementations"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-trait = { path = "../io-trait", version = "0.8.0" }
libc = { workspace = true }
