[package]
name = "io-impl"
version.workspace = true
edition = "2021"
description = "I/O implementations"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-trait.workspace = true
libc.workspace = true
