[package]
name = "io-test"
version = "0.2.0"
edition = "2021"
description = "I/O implementations for testing"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-trait = { path = "../io-trait", version = "0.1.3" }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
