[package]
name = "io-test"
version = "0.10.0"
edition = "2021"
description = "I/O implementations for testing"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-trait = { path = "../io-trait", version = "0.10.0" }

[dev-dependencies]
wasm-bindgen-test.workspace = true
