[package]
name = "io-test"
version.workspace = true
edition = "2021"
description = "I/O implementations for testing"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-trait.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
